# seferize

./: Cargo.toml  readme.md
seferize_core/: Cargo.toml  readme.md
seferize_core/src/: extractor.rs  filter.rs  lib.rs  parameters.rs  tests.rs  util.rs
seferize_core/src/samples/: mod.rs  tuple.rs
seferize_core/src/samples/extract_into/: enumerate.rs  implementation.rs  mod.rs  structs.rs
seferize_core/src/samples/samples_with_ignore/: implemetation.rs  mod.rs  module.rs
seferize_core/src/samples/simple_samples/: enumerate.rs  implemetation.rs  mod.rs  structs.rs  tuple.rs
seferize_core/src/samples/structs/: expected.rs  mod.rs  original.rs
seferize_core/src/tests/: mod.rs  utilities_for_test.rs
src/: filter.rs  lib.rs  util.rs
