[package]
name = "seferize"
version = "1.5.6"
edition = "2024"
description = "Procedural macro for converting Rust code blocks into string constants for reflection or documentation generation."
keywords = ["stringify", "reflection", "introspection","syn", "quote"]
license = "MIT"
repository = "https://github.com/patrickfp93/seferize"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.106", features = ["full"] }
quote = "1.0.41"
proc-macro2 = "1.0.103"
seferize_core = "1.4.7"

[package.metadata.doc]
index = "./readme.md"
