[package]
name = "seferize_core"
version = "1.4.7"
edition = "2024"
description = "Core of the proc-macro seferize."
keywords = ["stringify", "reflection", "introspection","syn", "quote"]
license = "MIT"

[dependencies]
syn = { version = "2.0.107", features = ["full"] }
quote = "1.0.41"
proc-macro2 = "1.0.101"
seferize_base = "1.2.2"
rstest = "0.26.1"


[dev-dependencies]
pretty_assertions = "1.4.1"

[package.metadata.doc]
index = "./readme.md"